--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ huggingface-hub==0.29.3
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
-keras==3.9.0
+keras<2.14
 kiwisolver==1.4.8
 libclang==18.1.1
 Markdown==3.7
