--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ ml-dtypes==0.4.1
 mpmath==1.3.0
 namex==0.0.8
 networkx==3.4.2
-numpy==2.0.2
+numpy==1.23.5
 opencv-python==4.11.0.86
 opt_einsum==3.4.0
 optree==0.14.1
@@ -74,7 +74,7 @@ requests==2.32.3
 rich==13.9.4
 rsa==4.9
 safetensors==0.5.3
-scipy==1.15.2
+scipy==1.10.1
 seaborn==0.13.2
 setuptools==75.8.2
 six==1.17.0
@@ -82,7 +82,7 @@ sniffio==1.3.1
 sympy==1.13.1
 tensorboard==2.13.0
 tensorboard-data-server==0.7.2
-tensorflow==2.13.0
+tensorflow>=2.14
 termcolor==2.5.0
 tokenizers==0.21.1
 torch==2.6.0
